Purple: - germline amp-del specifies if partially covers gene
Orange:
- removed Ensembl data cache